Style forms to be on one line per input to stop any mis alignments across borders.

--- a/wp-content/themes/stclair/src/sass/all-forms.scss
+++ b/wp-content/themes/stclair/src/sass/all-forms.scss
@@ -13,6 +13,49 @@
             font-size: em(12) !important;
             line-height: 28px !important;
             letter-spacing: 1px !important;
+            // -webkit-appearance: none; /* supported in Blink, Webkit, Gecko and Edge 12+ */
+            // appearance: none;
+        }
+
+        select:-moz-focusring {
+            color: transparent;
+            text-shadow: 0 0 0 #000;
+        }
+
+        select {
+            /* styling */
+            background-color: white;
+            border: thin solid #000;
+            border-radius: 4px;
+            display: inline-block;
+            font: inherit;
+            line-height: 1.5em;
+            padding: 0.5em 3.5em 0.5em 1em;
+          
+            /* reset */
+          
+            margin: 0;      
+            -webkit-box-sizing: border-box;
+            -moz-box-sizing: border-box;
+            box-sizing: border-box;
+            -webkit-appearance: none;
+            -moz-appearance: none;
+          }
+
+        select {
+            background-image:
+            linear-gradient(45deg, transparent 50%, gray 50%),
+            linear-gradient(135deg, gray 50%, transparent 50%),
+            linear-gradient(to right, #ccc, #ccc);
+          background-position:
+            calc(100% - 20px) calc(1em + 2px),
+            calc(100% - 15px) calc(1em + 2px),
+            calc(100% - 2.5em) 0.5em;
+          background-size:
+            5px 5px,
+            5px 5px,
+            1px 1.5em;
+          background-repeat: no-repeat;
         }
     }
 
@@ -49,12 +92,12 @@
             left: 0;
             font-family: $heading-font-family;
             color: $font-color;
-            font-size: em(20);
+            font-size: em(18);
             letter-spacing: 1px;
 
             @include breakpoint(tablet) {
                 left: 20px;
-                font-size: em(24);
+                font-size: em(20);
             }
         }
     }
@@ -77,17 +120,17 @@
         &--half {
             min-width: 100%;
 
-            @include breakpoint(tablet) {
-                min-width: 50%;
-            }
+            // @include breakpoint(tablet) {
+            //     min-width: calc(50% - 20px);
+            // }
         }
         
         &--third {
             min-width: 100%;
 
-            @include breakpoint(tablet) {
-                min-width: 33.33%;
-            }
+            // @include breakpoint(tablet) {
+            //     min-width: calc(33.33% - 20px);
+            // }
         }
     }
 
